[package]
name = "rustyray"
version = "0.1.0"
authors = ["kasper"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "*"
glfw = "*"
gl = "*"
stb_image = "*"
specs = { version = "*", features = ["specs-derive"] }
cgmath = { version = "*", features = ["swizzle"] }
