[package]
name = "hiisi"
version = "0.1.0"
authors = ["kasper"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
glfw = "*"
gl = "*"
stb_image = "*"
specs = { version = "*", features = ["shred-derive"] }
cgmath = { version = "*", features = ["swizzle"] }
log = "*"


# No idea what's going on here. 

[target.'cfg(target_os="linux")'.dependencies]
soloud = { version = "*", default-features = false, features = ["alsa"] }

#[target.'cfg(target_os="windows")'.dependencies]
#soloud = { version = "*" }
